# contract-costs-automation

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  schema.sql
Docs/: CLI.md  WORKDIR.md  Workflow.txt  cli_raport.md  work_dir_tree.txt
src/contract_costs/: config.py
src/contract_costs/builders/: cost_node_tree_builder.py
src/contract_costs/cli/: cli_builder.py  context.py  main.py  registry.py
src/contract_costs/infrastructure/: openai_invoice_client.py  pdf_text_extractor.py
src/contract_costs/model/: amount.py  company.py  contract.py  cost_node.py  cost_progress_snapshot.py  cost_type.py  invoice.py  invoice_line.py  invoice_totals.py  unit_of_measure.py
src/contract_costs/repository/: company_repository.py  contract_repository.py  cost_node_repository.py  cost_progress_snapshot_repository.py  cost_type_repository.py  invoice_line_repository.py  invoice_repository.py
src/contract_costs/runner/: watcher.py
src/contract_costs/services/: cost_node_service.py  cost_type_service.py
tests/: conftest.py
tests/builders/: test_cost_node_tree_builder.py
tests/cli/: test_cli_routes_add_company.py  text_context.py
tests/cli/adapters/: test_company_adapter.py  test_cost_type_adapter.py  test_update_company_adapter.py
tests/cli/commands/: test_add_cost_type.py  test_edit_company.py
tests/model/: test_amount.py  test_company.py  test_contract.py  test_cost_node.py  test_invoice_line.py  test_invoice_total_service.py
tests/repository/: conftest.py
tests/workflow/: test_invoice_workflow.py
(+164 files in other folders)
